change order of people

--- a/index.html
+++ b/index.html
@@ -1197,6 +1197,74 @@
         <!-- OWL CAROUSEL -->
         <div id="experts-slider" class="owl-carousel owl-theme">
 
+		
+		
+        <!--Card-->
+        <!--Card image-->
+        <div class="expert-item text-center">
+            <div class="view overlay">
+                <img src="img/img-togas-lp3/experts (6).jpg" alt="Tony Karantonis" class="card-img-top-tg img-fluid rounded-circle">
+                <a>
+                    <div class="mask flex-center rgba-stylish-slight rounded-circle">
+                        <p class="white-text">John<br>Karantonis</p>
+                    </div>
+                </a>
+            </div>
+
+            <!--Card content-->
+            <div class="card-body">
+                <!--Title-->
+                <h5 class="experts-name my-3">John<br>Karantonis</h5>
+                <h6 class="subscript-center pb-3">director of creative studio</h6>
+                <p class="card-text">Tony brings at Togas 30 years of experience in custom-made window treatments, upholstery, bedding and furniture. For years, he has been working with top designers in New York City delivering high-quality workmanship for all their projects. Entrusting Tony to create a custom home product, one can be confident to receive a unique tailored look that will appeal to an eclectic style.</p>
+            </div>
+        </div>
+        <!--/.Card-->
+		
+		<!--Card-->
+        <!--Card image-->
+        <div class="expert-item text-center">
+            <div class="view overlay">
+                <img src="img/img-togas-lp3/experts (7).jpg" alt="Tzanis Sifnaios" class="card-img-top-tg img-fluid rounded-circle">
+                <a>
+                    <div class="mask flex-center rgba-stylish-slight rounded-circle">
+                        <p class="white-text">Tzanis<br>Sifnaios</p>
+                    </div>
+                </a>
+            </div>
+
+            <!--Card content-->
+            <div class="card-body">
+                <!--Title-->
+                <h5 class="experts-name my-3">Tzanis<br>Sifnaios</h5>
+                <h6 class="subscript-center pb-3">Architectural Design Director</h6>
+                <p class="card-text">Tzannis studied Graphics & Design and has been working for over 30 years in his field. He initially worked as an Art Director in leading Greek magazines while he has been working at Togas for the last five years. He is one of Togas’ primary curators and many designs are influenced by his approach and aesthetics. He believes that quality and attention to detail are crucial for building a luxury brand.</p>
+            </div>
+        </div>
+        <!--/.Card-->
+		
+		<!--Card-->
+        <!--Card image-->
+        <div class="expert-item text-center">
+            <div class="view overlay">
+                <img src="img/img-togas-lp3/experts (5).jpg" alt="Anna Zezyulya" class="card-img-top-tg img-fluid rounded-circle">
+                <a>
+                    <div class="mask flex-center rgba-stylish-slight rounded-circle">
+                        <p class="white-text">Anna<br>Zezyulya</p>
+                    </div>
+                </a>
+            </div>
+
+            <!--Card content-->
+            <div class="card-body">
+                <!--Title-->
+                <h5 class="experts-name my-3">Anna<br>Zezyulya</h5>
+                <h6 class="subscript-center pb-3">head of turkish office</h6>
+                <p class="card-text">Anna has a great passion for her job! She has been working in home textiles for 18 years as a master of decorative needlework. She is specialized in embroidering curtain tiebacks, bandeaus and lambrequins. After finishing two Universities in Designing, she has worked both as a buyer and a textile designer. She has furthermore collaborated with high-class restaurants and hotels.</p>
+            </div>
+        </div>
+        <!--/.Card-->
+		
         <!--Card image-->
         <div class="expert-item text-center">
             <div class="view overlay">
@@ -1217,29 +1285,31 @@
         </div>       
         <!--/.Card-->
 
-        <!--Card-->
+		<!--Card-->
         <!--Card image-->
         <div class="expert-item text-center">
             <div class="view overlay">
-                <img src="img/img-togas-lp3/experts (3).jpg" alt="Victoria Ivanova" class="card-img-top-tg img-fluid rounded-circle">
+                <img src="img/img-togas-lp3/experts (6).jpg" alt="Tony Karantonis" class="card-img-top-tg img-fluid rounded-circle">
                 <a>
                     <div class="mask flex-center rgba-stylish-slight rounded-circle">
-                        <p class="white-text">Victoria<br>Ivanova</p>
+                        <p class="white-text">Tony<br>Karantonis</p>
                     </div>
                 </a>
             </div>
+
             <!--Card content-->
             <div class="card-body">
                 <!--Title-->
-                <h5 class="experts-name my-3">Victoria<br>Ivanova</h5>
+                <h5 class="experts-name my-3">Tony<br>Karantonis</h5>
                 <h6 class="subscript-center pb-3">director of creative studio</h6>
-                <p class="card-text">Born and raised in Moscow, Victoria got her degree in Decoration of Textiles while also studied at the Art School. She has been working in the Design and Interior field for the last 15 years. She loves getting involved in exciting design projects and furniture.</p>
+                <p class="card-text">Tony brings at Togas 30 years of experience in custom-made window treatments, upholstery, bedding and furniture. For years, he has been working with top designers in New York City delivering high-quality workmanship for all their projects. Entrusting Tony to create a custom home product, one can be confident to receive a unique tailored look that will appeal to an eclectic style.</p>
             </div>
         </div>
         <!--/.Card-->
-
-
-        <!--Card-->
+		
+		
+		
+		<!--Card-->
         <!--Card image-->
         <div class="expert-item text-center">
             <div class="view overlay">
@@ -1260,29 +1330,8 @@
             </div>
         </div>
         <!--/.Card-->
-
-        <!--Card-->
-        <!--Card image-->
-        <div class="expert-item text-center">
-            <div class="view overlay">
-                <img src="img/img-togas-lp3/experts (5).jpg" alt="Anna Zezyulya" class="card-img-top-tg img-fluid rounded-circle">
-                <a>
-                    <div class="mask flex-center rgba-stylish-slight rounded-circle">
-                        <p class="white-text">Anna<br>Zezyulya</p>
-                    </div>
-                </a>
-            </div>
-
-            <!--Card content-->
-            <div class="card-body">
-                <!--Title-->
-                <h5 class="experts-name my-3">Anna<br>Zezyulya</h5>
-                <h6 class="subscript-center pb-3">head of turkish office</h6>
-                <p class="card-text">Anna has a great passion for her job! She has been working in home textiles for 18 years as a master of decorative needlework. She is specialized in embroidering curtain tiebacks, bandeaus and lambrequins. After finishing two Universities in</p>
-            </div>
-        </div>
-        <!--/.Card-->
-
+		
+		
         <!--Card-->
         <!--Card image-->
         <div class="expert-item text-center">
@@ -1304,50 +1353,29 @@
             </div>
         </div>
         <!--/.Card-->
-
+		
+		
         <!--Card-->
         <!--Card image-->
         <div class="expert-item text-center">
             <div class="view overlay">
-                <img src="img/img-togas-lp3/experts (6).jpg" alt="Tony Karantonis" class="card-img-top-tg img-fluid rounded-circle">
+                <img src="img/img-togas-lp3/experts (3).jpg" alt="Victoria Ivanova" class="card-img-top-tg img-fluid rounded-circle">
                 <a>
                     <div class="mask flex-center rgba-stylish-slight rounded-circle">
-                        <p class="white-text">Tony<br>Karantonis</p>
+                        <p class="white-text">Victoria<br>Ivanova</p>
                     </div>
                 </a>
             </div>
-
             <!--Card content-->
             <div class="card-body">
                 <!--Title-->
-                <h5 class="experts-name my-3">Tony<br>Karantonis</h5>
+                <h5 class="experts-name my-3">Victoria<br>Ivanova</h5>
                 <h6 class="subscript-center pb-3">director of creative studio</h6>
-                <p class="card-text">Tony brings at Togas 30 years of experience in custom-made window treatments, upholstery, bedding and furniture. For years, he has been working with top designers in New York City delivering high-quality workmanship for all their projects. Entrusting Tony to create a custom home product, one can be confident to receive a unique tailored look that will appeal to an eclectic style.</p>
+                <p class="card-text">Born and raised in Moscow, Victoria got her degree in Decoration of Textiles while also studied at the Art School. She has been working in the Design and Interior field for the last 15 years. She loves getting involved in exciting design projects and furniture.</p>
             </div>
         </div>
         <!--/.Card-->
 
-        <!--Card-->
-        <!--Card image-->
-        <div class="expert-item text-center">
-            <div class="view overlay">
-                <img src="img/img-togas-lp3/experts (7).jpg" alt="Tzanis Sifnaios" class="card-img-top-tg img-fluid rounded-circle">
-                <a>
-                    <div class="mask flex-center rgba-stylish-slight rounded-circle">
-                        <p class="white-text">Tzanis<br>Sifnaios</p>
-                    </div>
-                </a>
-            </div>
-
-            <!--Card content-->
-            <div class="card-body">
-                <!--Title-->
-                <h5 class="experts-name my-3">Tzanis<br>Sifnaios</h5>
-                <h6 class="subscript-center pb-3">Architectural Design Director</h6>
-                <p class="card-text">Tzannis studied Graphics & Design and has been working for over 30 years in his field. He initially worked as an Art Director in leading Greek magazines while he has been working at Togas for the last five years. He is one of Togas’ primary curators and many designs are influenced by his approach and aesthetics. He believes that quality and attention to detail are crucial for building a luxury brand.</p>
-            </div>
-        </div>
-        <!--/.Card-->
 
         </div>
         <!-- OWL -->
@@ -1449,7 +1477,7 @@
                         <p class="txt-contact pt-2 pb-2">Greenwich</br>51-53 East Putnam Avenue</br>Greenwich CT 06830</p>
                         <img src="img/img-togas-lp3/icon-02-25.svg" class="mb-2" width="20" alt="Store Hours"></br> 
                         <h7 class="title-contact mt-5">Store Hours</h7>
-                        <p class="txt-contact pt-2 pb-2">Monday-Saturday 10:00am-6:00pm</br>Sunday 12:00pm – 5:00pm</br>Sunday 11:00am - 5:00pm</p>
+                        <p class="txt-contact pt-2 pb-2">Monday-Saturday 10:00am-6:00pm</br>Sunday 11:00am - 5:00pm</br>&nbsp;</p>
                         <img src="img/img-togas-lp3/icon-03-26.svg" class="mb-2" width="20" alt="Phone"></br> 
                         <h7 class="title-contact mt-5">Phone</h7><p class="txt-contact pt-2 pb-2">+1 203 900 1555</p>
                         <button type="button" class="btn btn-outline-bronze-cm mt-4" data-toggle="modal" data-target="#modalContactForm">call an expert</button>
@@ -1470,9 +1498,9 @@
                         <p class="txt-contact pt-2 pb-2">New York,</br>630 Old Country Road</br>Garden City 11530</p>
                         <img src="img/img-togas-lp3/icon-02-25.svg" class="mb-2" width="20" alt="Store Hours"></br> 
                         <h7 class="title-contact mt-5">Store Hours</h7>
-                        <p class="txt-contact pt-2 pb-2">Monday-Saturday 10:00am-6:00pm</br>Sunday 12:00pm – 5:00pm</br>Sunday 11:00am - 5:00pm</p>
+                        <p class="txt-contact pt-2 pb-2">Monday-Saturday 10:00am-9:30pm</br>Sunday 11:00am - 5:00pm</br>&nbsp;</p>
                         <img src="img/img-togas-lp3/icon-03-26.svg" class="mb-2" width="20" alt="Phone"></br> 
-                        <h7 class="title-contact mt-5">Phone</h7><p class="txt-contact pt-2 pb-2">+1 203 900 1555</p>
+                        <h7 class="title-contact mt-5">Phone</h7><p class="txt-contact pt-2 pb-2">+1 516 747 1215</p>
                         <button type="button" class="btn btn-outline-bronze-cm mt-4" data-toggle="modal" data-target="#modalContactForm">call an expert</button>
                         
                         <div id = "map3" style = "height:348px;margin-bottom:48px;margin-left:1px;margin-right:1px;margin-top:48px;"></div>
