fix email messages and ajax-loader

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
         <!-- FORM -->
         <form name = "callback" method = "post">
-			<div class="ajax-wrapper" id="ajax-wrapper" style = "text-align:center;margin:auto;position: relative;min-width: 50px;"></div>
+			<div class="ajax-wrapper" id="ajax-wrapper"></div>
 			<div id = "valid"></div>
 			<div id = "fail">Something is wrong. Please, check information in the form.</div>	
             <!-- Input text -->
