--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                 <div class="card-body">
                     <!--Title-->
                     <h4 class="card-title service-title py-2">Custom drapes</h4>
-                    <p class="txt-sub-cm">WWe frame your window in the way<br/>that a beautiful accessory<br/>complements a dress.</p>
+                    <p class="txt-sub-cm">We frame your window in the way<br/>that a beautiful accessory<br/>complements a dress.</p>
                     <!--Button-->
                     <div class="button-wrapper">
                         <button type="button" id = "button-draps" class="btn btn-outline-bronze-cm mt-4 show-bind-button" data-toggle="collapse" onclick = "drapsCollapse();" aria-expanded="false" aria-controls="collapseDraps" data-element="#bind-button-draps">Discover</button>
