John.. Tony.. replace them

--- a/index.html
+++ b/index.html
@@ -1626,7 +1626,7 @@
         <!--Card image-->
         <div class="expert-item text-center">
             <div class="view overlay">
-                <img src="img/img-togas-lp3/experts-(11).jpg" alt="John Karantonis" class="card-img-top-tg img-fluid rounded-circle">
+                <img src="img/img-togas-lp3/experts%20(6).jpg" alt="John Karantonis" class="card-img-top-tg img-fluid rounded-circle">
                 <a>
                     <div class="mask flex-center rgba-stylish-slight rounded-circle">
                         <p class="white-text">John<br>Karantonis</p>
@@ -1712,7 +1712,7 @@
         <!--Card image-->
         <div class="expert-item text-center">
             <div class="view overlay">
-                <img src="img/img-togas-lp3/experts%20(6).jpg" alt="Tony Karantonis" class="card-img-top-tg img-fluid rounded-circle">
+                <img src="img/img-togas-lp3/experts-(11).jpg" alt="Tony Karantonis" class="card-img-top-tg img-fluid rounded-circle">
                 <a>
                     <div class="mask flex-center rgba-stylish-slight rounded-circle">
                         <p class="white-text">Tony<br>Karantonis</p>
