--- a/index.html
+++ b/index.html
@@ -1121,7 +1121,7 @@
 		<!-- Row2 ::catalog-download -->
 		<div class="row">
 			<div class = "col-xs-12 col-sm-8 d-flex justify-content-center "><h3 class = "txt-catalog">Discover the Custom-Made 2018 Togas Collection</h3></div>
-			<div class = "col-xs-12 col-sm-4 d-flex justify-content-center " ><button type = "button" target = "_blank" class = "btn btn-fill-bronze waves-effect waves-light catalog-button" onclick = "window.open('https://media.togas.com/media/wysiwyg/couture/COUTURE_INTERNATIONAL_2018_web.pdf')">download catalog</div>
+			<div class = "col-xs-12 col-sm-4 d-flex justify-content-center " ><button type = "button" class = "btn btn-fill-bronze waves-effect waves-light catalog-button" onclick = "window.open('https://media.togas.com/media/wysiwyg/couture/COUTURE_INTERNATIONAL_2018_web.pdf')">download catalog</div>
 		</div>
 		<!-- row -->
 	</div>
