--- a/index.html
+++ b/index.html
@@ -1340,7 +1340,7 @@
                 <div class="card-body">
                     <!--Title-->
                     <h4 class="card-title service-title py-3">Accessories</h4>
-                    <p class="txt-sub-cm">Beauty lies<br/>in the details!<br/></p>
+                    <p class="txt-sub-cm">Beauty lies in the details! Check our collection of pillows,<br/>tassels and trimmings.<br/></p>
                     
                      <!--Button-->
                     <div class="button-wrapper" style = "margin-top:0.4rem">
@@ -1652,7 +1652,7 @@
                 <!--Title-->
                 <h5 class="experts-name my-3">John<br>Karantonis</h5>
                 <h6 class="subscript-center pb-3">5th Ave Showroom Manager, Head of Custom Made services USA</h6>
-                <p class="card-text">John has over 30 years of experience in fabric and textile interior services. From 1979 to 1997 he worked for "Paterson Silks", became manager of the West 72nd street branch and then managed the flagship store. After 18 years, he joined "Beckensteins", where he was constantly dealing with new challenges that gave him a huge amount of experience in my field. Since August 2017 he has been working at Togas, a family business that, as he underlines, cares about the client. John delivers world-class service and attention to detail for every project at hand.</p>
+                <p class="card-text">John has over 30 years of experience in fabric and textile interior services. From 1979 to 1997 he worked for "Paterson Silks" and then he joined "Beckensteins", where new challenges gave him a huge amount of experience in his field. Since August 2017 he has been working at Togas. He delivers world-class custom service and attention to detail for every project at hand.</p>
             </div>
         </div>
         <!--/.Card-->
@@ -1828,7 +1828,7 @@
                 <!--Title-->
                 <h5 class="experts-name my-3">Svetlana<br>Varlamova</h5>
                 <h6 class="subscript-center pb-3">Head of Custom Made Services UAE</h6>
-                <p class="card-text">Svetlana works at Togas since 2009. For the last two years, she is the leading specialist in Textual Interior Design at our new boutique in Dubai. Creative thinking and a different outlook on everyday things are what makes a difference, according to her. "Every client is unique in his own way. And our aim is not only to know his preferences, but also to grasp the subtle desires that correspond to his type of character. After all, the interior is the continuation of the inner world of every person!"</p>
+                <p class="card-text">Svetlana works at Togas since 2009. For the last two years, she is the leading specialist in Textual Interior Design at the new boutique in Dubai. Creative thinking and a different outlook on everyday things are what makes a difference, according to her. She believes that every client is unique and that he should be treated separately according to his own needs.</p>
             </div>
         </div>
         <!--/.Card-->
@@ -2111,7 +2111,7 @@
         <div class="container-fluid bg-grey mt-5 pt-5 pb-4">
             <div class="container pt-4">
                 <div class="row justify-content-center text-center">
-                    <h2 class="section-title h2-responsive">Ready made</h2>
+                    <h2 class="section-title h2-responsive">Ready-made</h2>
                 </div>
 
                 <!-- SUBSCRIPT -->
