--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="Togas provides a large range of made to measure curtains and bedspreads. Our designers will guide you through the interior design process.">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-     <title>Togas. Custome made.V-31</title>
+    <title>Made to measure curtains & bedspreads - Togas</title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
@@ -86,7 +87,9 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="#custom-made-services">services</a>
                     </li>
-
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#products-section">products</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#vendors">vendors</a>
                     </li>
@@ -337,7 +340,7 @@
                 <div class="view overlay">
                     <img src="img/img-togas-lp3/shades.jpg" alt="Shades" class="card-img-top-tg mx-auto img-fluid">
                         <a>
-                            <div class="mask waves-effect waves-light rgba-white-slight"></div>
+                            <div class="mask waves-effect waves-light rgba-white-slight" onclick="shadesCollapse();"></div>
                         </a>
                 </div>
 
@@ -422,7 +425,7 @@
                 <div class="view overlay">
                     <img src="img/img-togas-lp3/upholstery%20(5).jpg" alt="Upholstery" class="card-img-top-tg mx-auto img-fluid">
                         <a>
-                            <div class="mask waves-effect waves-light rgba-white-slight"></div>
+                            <div class="mask waves-effect waves-light rgba-white-slight" onclick = "upholsteryCollapse();"></div>
                         </a>
                 </div>
 
@@ -504,7 +507,7 @@
                 <div class="view overlay">
                     <img src="img/img-togas-lp3/custom-drapes%20(2).jpg" alt="Custom draparies" class="card-img-top-tg mx-auto img-fluid">
                         <a>
-                            <div class="mask waves-effect waves-light rgba-white-slight"></div>
+                            <div class="mask waves-effect waves-light rgba-white-slight" onclick = "drapsCollapse();"></div>
                         </a>
                 </div>
 
@@ -738,7 +741,7 @@
                 <div class="view overlay">
                     <img src="/media/couture/img/img-togas-lp3/headboard.jpg" alt="Headboards" class="card-img-top-tg mx-auto img-fluid">
                         <a>
-                            <div class="mask waves-effect waves-light rgba-white-slight"></div>
+                            <div class="mask waves-effect waves-light rgba-white-slight" onclick = "headboardsCollapse();"></div>
                         </a>
                 </div>
 
@@ -817,7 +820,7 @@
                 <div class="view overlay">
                     <img src="img/img-togas-lp3/inhouse.jpg" alt="In-house Design" class="card-img-top-tg mx-auto img-fluid">
                         <a>
-                            <div class="mask waves-effect waves-light rgba-white-slight"></div>
+                            <div class="mask waves-effect waves-light rgba-white-slight" onclick = "inHouseDesignersCollapse();"></div>
                         </a>
                 </div>
 
@@ -899,7 +902,7 @@
                 <div class="view overlay">
                     <img src="img/img-togas-lp3/b2b-4.jpg" alt="b2b" class="card-img-top-tg mx-auto img-fluid">
                         <a>
-                            <div class="mask waves-effect waves-light rgba-white-slight"></div>
+                            <div class="mask waves-effect waves-light rgba-white-slight" onclick = "b2bCollapse();"></div>
                         </a>
                 </div>
 
@@ -1126,6 +1129,8 @@
 		<!-- row -->
 	</div>
 </div>
+</section>
+<section id = "products-section">
 <div class="container-fluid  bg-grey">
     <div class="container py-5">	
 		
@@ -1154,7 +1159,7 @@
                 <div class="view overlay">
                     <img src="img/img-togas-lp3/fabrics.jpg" alt="Fabrics" class="card-img-top-tg mx-auto img-fluid">
                         <a>
-                            <div class="mask waves-effect waves-light rgba-white-slight"></div>
+                            <div class="mask waves-effect waves-light rgba-white-slight" onclick = "fabricsCollapse();"></div>
                         </a>
                 </div>
 
@@ -1253,7 +1258,7 @@
                 <div class="view overlay">
                     <img src="img/img-togas-lp3/hardware-vertical.jpg" alt="hardware" class="card-img-top-tg mx-auto img-fluid">
                         <a>
-                            <div class="mask waves-effect waves-light rgba-white-slight"></div>
+                            <div class="mask waves-effect waves-light rgba-white-slight" onclick = "hardwareCollapse();"></div>
                         </a>
                 </div>
 
@@ -1332,7 +1337,7 @@
                 <div class="view overlay">
                     <img src="img/img-togas-lp3/accessories-new-3.jpg" alt="Accessories" class="card-img-top-tg mx-auto img-fluid">
                         <a>
-                            <div class="mask waves-effect waves-light rgba-white-slight"></div>
+                            <div class="mask waves-effect waves-light rgba-white-slight" onclick = "accessoriesCollapse();"></div>
                         </a>
                 </div>
 
@@ -1560,6 +1565,7 @@
         </div>
         <!-- Container -->
     </div>
+	
     <!-- Container Fluid -->
 </section>
 <!-- /SECTION "CUSTOM MADE SERVICES" -->
@@ -1571,7 +1577,7 @@
             <div class="container py-5">
             <div class="row row-margin d-flex align-items-center view overlay">
                 <div class="col-12 col-md-9 p-advance-15">
-                    <h3 class="section-black-title text-center text-md-left my-3">MAKE YOUR STYLISTIC VISION A REALITY</h3>
+                    <h3 class="section-black-title text-center text-md-left my-3">MAKE YOUR STYLISTIC VISION<br/>A REALITY</h3>
                     <p class="section-black-text text-center text-md-left">Imagine a world of possibilities and create the perfect custom items for your interior!</p>
                 </div>
                 <div class="col-12 col-md-3 p-advance-15 d-flex justify-content-center justify-content-md-end mt-4 mt-md-0">
@@ -1657,6 +1663,29 @@
         </div>
         <!--/.Card-->
 		
+
+		
+		<!--Card-->
+        <!--Card image-->
+        <div class="expert-item text-center">
+            <div class="view overlay">
+                <img src="img/img-togas-lp3/experts%20(5).jpg" alt="Anna Zezyulya" class="card-img-top-tg img-fluid rounded-circle">
+                <a>
+                    <div class="mask flex-center rgba-stylish-slight rounded-circle">
+                        <p class="white-text">Anna<br>Zezyulya</p>
+                    </div>
+                </a>
+            </div>
+            <!--Card content-->
+            <div class="card-body">
+                <!--Title-->
+                <h5 class="experts-name my-3">Anna<br>Zezyulya</h5>
+                <h6 class="subscript-center pb-3">Regional Manager</h6>
+                <p class="card-text">Anna has a great passion for her job! She has been working in home textiles for 18 years as a master of decorative needlework. She is specialized in embroidering curtain tiebacks, bandeaus and lambrequins. After finishing two Universities in Designing, she has worked both as a buyer and a textile designer. She has furthermore collaborated with high-class restaurants and hotels.</p>
+            </div>
+        </div>
+        <!--/.Card-->
+		
 		<!--Card-->
         <!--Card image-->
         <div class="expert-item text-center">
@@ -1677,30 +1706,7 @@
                 <p class="card-text">Tzannis studied Graphics & Design and has been working for over 30 years in his field. He initially worked as an Art Director in leading Greek magazines while he has been working at Togas for the last five years. He is one of Togas’ primary curators and many designs are influenced by his approach and aesthetics. He believes that quality and attention to detail are crucial for building a luxury brand.</p>
             </div>
         </div>
-        <!--/.Card-->
-		
-		<!--Card-->
-        <!--Card image-->
-        <div class="expert-item text-center">
-            <div class="view overlay">
-                <img src="img/img-togas-lp3/experts%20(5).jpg" alt="Anna Zezyulya" class="card-img-top-tg img-fluid rounded-circle">
-                <a>
-                    <div class="mask flex-center rgba-stylish-slight rounded-circle">
-                        <p class="white-text">Anna<br>Zezyulya</p>
-                    </div>
-                </a>
-            </div>
-
-            <!--Card content-->
-            <div class="card-body">
-                <!--Title-->
-                <h5 class="experts-name my-3">Anna<br>Zezyulya</h5>
-                <h6 class="subscript-center pb-3">Regional Manager</h6>
-                <p class="card-text">Anna has a great passion for her job! She has been working in home textiles for 18 years as a master of decorative needlework. She is specialized in embroidering curtain tiebacks, bandeaus and lambrequins. After finishing two Universities in Designing, she has worked both as a buyer and a textile designer. She has furthermore collaborated with high-class restaurants and hotels.</p>
-            </div>
-        </div>
-        <!--/.Card-->
-		
+        <!--/.Card-->		
         <!--Card image-->
         <div class="expert-item text-center">
             <div class="view overlay">
@@ -2129,7 +2135,7 @@
                     <div class="col-10 col-sm-6 col-md-4">
                       <div class="mb-5 mt-5 text-center view overlay">
                         <img class="card-img-top-tg mx-auto" src="img/img-togas-lp3/bed-01.jpg" alt="Bedding">
-                            <a>
+                            <a href="https://www.togas.com/us/bedding/" target="_blank">
                                 <div class="mask waves-effect waves-light rgba-white-slight"></div>
                             </a>
                         <div class="card-body">
@@ -2143,7 +2149,7 @@
                     <div class="col-10 col-sm-6 col-md-4">
                       <div class="mb-5 mt-5 text-center view overlay">
                         <img class="card-img-top-tg mx-auto" src="img/img-togas-lp3/bed-02.jpg" alt="Duvets">
-                            <a>
+                            <a href="https://www.togas.com/us/duvets/" target="_blank">
                                 <div class="mask waves-effect waves-light rgba-white-slight"></div>
                             </a>
                         <div class="card-body">
@@ -2157,7 +2163,7 @@
                     <div class="col-10 col-sm-6 col-md-4">
                       <div class="my-5 text-center view overlay">
                         <img class="card-img-top-tg mx-auto" src="img/img-togas-lp3/bed-03.jpg" alt="Pillows">
-                            <a>
+                            <a href="https://www.togas.com/us/pillows/" target="_blank">
                                 <div class="mask waves-effect waves-light rgba-white-slight"></div>
                             </a>
                         <div class="card-body">
