final final final

--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@
                     <h4 class="card-title service-title py-3">b2b</h4>
                     <p class="txt-sub-cm">Are you a professional<br/>in interior or architectural design?<br/>Then, get in touch!</p>
                     <!--Button-->
-                    <div class="button-wrapper" style = "margin-top:0.4rem">
+                    <div class="button-wrapper" style = "margin-top:0.5rem">
                         <button type="button" id = "button-b2b" class="btn btn-outline-bronze-cm mt-4 show-bind-button" data-toggle="collapse" onclick = "b2bCollapse();" aria-expanded="false" aria-controls="collapseB2b" data-element="#bind-button-b2b">Discover</button>
                         <!--<div class = "bind-button" id="bind-button-draps"></div>-->
                     </div> 
@@ -1264,7 +1264,7 @@
                 <!--Card content-->
                 <div class="card-body">
                     <!--Title-->
-                    <h4 class="card-title service-title py-2">Hardware</h4>
+                    <h4 class="card-title service-title py-3">Hardware</h4>
                     <p class="txt-sub-cm">Complete your final<br/>look with the top<br/>hardware items.</p>
                     <!--Button-->
                     <div class="button-wrapper">
@@ -1347,7 +1347,7 @@
                     <p class="txt-sub-cm">Beauty lies in the details! <br/>Check our collection of pillows,<br/>tassels and trimmings.<br/></p>
                     
                      <!--Button-->
-                    <div class="button-wrapper" style = "margin-top:0.4rem">
+                    <div class="button-wrapper">
                         <button type="button"  id = "button-accessories"  class="btn btn-outline-bronze-cm mt-4 show-bind-button" data-toggle="collapse" onclick = "accessoriesCollapse();" aria-expanded="false" aria-controls="collapseAccessories" data-element="#bind-button-accessories">Discover</button>
                         <!--<div class = "bind-button" id="bind-button-accessories"></div>-->
                     </div> 
