--- a/index.html
+++ b/index.html
@@ -909,7 +909,7 @@
                 <!--Card content-->
                 <div class="card-body">
                     <!--Title-->
-                    <h4 class="card-title service-title py-3">b2b</h4>
+                    <h4 class="card-title service-title py-3">Contract</h4>
                     <p class="txt-sub-cm">Are you a professional<br/>in interior or architectural design?<br/>Then, get in touch!</p>
                     <!--Button-->
                     <div class="button-wrapper" style = "margin-top:0.5rem">
@@ -1123,7 +1123,7 @@
 		<!-- Row2 ::catalog-download -->
 		<div class="row">
 			<div class = "col-xs-12 col-sm-12 col-md-8 d-flex justify-content-center "><h3 class = "txt-catalog">Discover the Custom-Made 2018 Togas Collection</h3></div>
-			<div class = "col-xs-12 col-sm-12 col-md-4 d-flex justify-content-center " ><button type = "button" class = "btn btn-fill-bronze waves-effect waves-light catalog-button" onclick = "window.open('https://media.togas.com/media/wysiwyg/couture/COUTURE_INTERNATIONAL_2018_web.pdf')">download catalog</div>
+			<div class = "col-xs-12 col-sm-12 col-md-4 d-flex justify-content-center " ><button type = "button" class = "btn btn-fill-bronze waves-effect waves-light catalog-button" onclick = "window.open('https://media.togas.com/media/wysiwyg/couture/COUTURE_INTERNATIONAL_2018_web.pdf')">Download Catalogue</div>
 		</div>
 		<!-- row -->
 	</div>
